# exporo-sme-export-assistant

./: .env.example  .gitignore  Makefile  README.md  app.py  auth.py  chat.py  complete_export_dashboard.py  config.py  export_dashboard_architecture.md  furniture_assessment.py  langkah_ekspor.db  login.py  main.py  prompt_user_interaction.md  pyproject.toml
archive/: app.py  export_dashboard.py
docs/: chat_export_readiness_architecture.md  prd_export_readiness.md  prd_features.md
src/exporo/: auth.py  chat.py  config.py  dashboard.py  export_readiness.py  main.py
