[project]
name = "export"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.24.0",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "streamlit>=1.46.1",
    "watchdog>=6.0.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.2",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
]
